memlog: Hack up metadata

Bug: 751324
Change-Id: Ice4b274224bb7fe680139c915748a2e14923ac5b